Content : Stripping out redundant content - Added grid SCSS

--- a/index.html
+++ b/index.html
@@ -1,19 +1,6 @@
 ---
-title: Northswiss Jekyll Boilerplate
+title: UX Compass
 ---
 
-<p>This boilerplate was made to stand on the shoulders of two giants. The first being the standard <a href="http://jekyllrb.com/">Jekyll framework</a>, and the second being the <a href="https://html5boilerplate.com">HTML5 Boilerplate template</a>. Also, recently added is <a href="http://bourbon.io/">Bourbon</a> and Neat, so that you can now build sites easily using <a href="http://neat.bourbon.io/examples/">Neats intuitive grid structure</a>.</p>
-
-<p>On top of this, I have also baked in some standard goodies that I use to help streamline time to production. Please feel free to fork this project and suggest future improvements.</p>
-
-<p>Some new goodies recently added:</p>
-
-<ul class="fancy">
-  <li>Scripted inline SVG</li>
-  <li>HTML, CSS and JS compression Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam at cumque deserunt distinctio facere facilis impedit inventore ipsa modi molestiae molestias quaerat, quo reprehenderit sequi tempore, ullam unde vel voluptates.</li>
-  <li>Analytics starter kit</li>
-</ul>
-
-<p>Many thanks,</p>
-
-<a href="http://about.me/chrisroy" title="More info about Chris">Chris</a>
+<p>UX Compass is a site dedicated to exploring the field of UX within the travel industry.</p>
+<p>We're just getting things started, so please bear with us while we get some resources together. If you would like to contribute, please get in touch via our <a href="http://github.com/uxcompass">Github</a> page.</p>
