--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 title: UX Compass
+id: home
 ---
 
-<p>UX Compass is a site dedicated to exploring the field of UX within the travel industry.</p>
-<p>We're just getting things started, so please bear with us while we get some resources together. If you would like to contribute, please get in touch via our <a href="http://github.com/uxcompass">Github</a> page.</p>
+<p class="fadeInDown">UX Compass is a site dedicated to exploring the field of UX within the travel industry.</p>
+<p class="fadeInDown delay-short">We're just getting things started, so please bear with us while we get some resources together. If you would like to contribute, please get in touch via our <a href="http://github.com/uxcompass">Github</a> page.</p>
