refa(config): Setting up some basics

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ title: UX Compass
 id: home
 ---
 
-<p class="fadeInDown">UX Compass is a site dedicated to exploring the field of UX within the travel industry.</p>
+<p class="fadeInDown">UX Compass is a site dedicated to exploring the field of User Experience within the travel industry.</p>
 <p class="fadeInDown delay-short">We're just getting things started, so please bear with us while we get some resources together. If you would like to contribute, please get in touch via our <a href="http://github.com/uxcompass">Github</a> page.</p>
